test/compare/sources/errors/bad-reference.go


package main

func main() {
	_ = &0
}
